<resources>
    <string name="app_name">SOS-urgent</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="titres_urgence">
        <item>"L'arrêt cardiaque - les gestes de secours "</item>
        <item>"LES MORSURES"</item>
        <item>"NOYADE - Les gestes qui sauvent"</item>
        <item>"Incendie"</item>
        <item>"Blessure par balle"</item>
    </string-array>
    <string-array name="descriptions_urgence">
        <item>
            "Un arrêt cardio-ventilatoire, ou arrêt cardio-respiratoire (ACR), est l'arrêt de la circulation du sang et de la respiration chez un individu. On parle aussi parfois simplement d'arrêt circulatoire ou d'arrêt cardiaque.L'arrêt cardio-circulatoire ne signifie pas nécessairement la mort de la victime : en cas de constatation d'un arrêt cardio-circulatoire, il faut immédiatement prévenir les secours et commencer la réanimation cardio-pulmonaire en attendant les secours.Son incidence annuelle, en dehors du milieu hospitalier, est proche de 5 cas pour 10 000 habitants en Amérique du Nord (dont plus de la moitié bénéficie d'une tentative de réanimation en 2007)"
        </item>
        <item>
            "Les vipères sont les seuls serpents venimeux vivant sous nos climats mais leur morsure est très rarement mortelle. Il se peut que l'on ressente une petite douleur au moment de la morsure mais sans avoir le temps d'apercevoir le reptile. Les crocs de vipère donnent deux petits points, souvent entourés d'une auréole rouge"
        </item>
        <item>
            "L'une des principales causes de mortalité par accident chez les enfants, la noyade engendre la mort d'une centaine d'enfants chaque année,classée parmi les premières causes de mortalité infantile due aux accidents, la noyade est un accident dont l'issue est souvent tragique.Environ 1 000 personnes se noient chaque année en France, en majorité des enfants de moins de 6 ans.La prudence est de mise aux abords de la plage, de la piscine et autres points d'eau.Les enfants ne sont pas les seules victimes de noyade : la vigilance doit être la même pour tous."
        </item>
        <item>
            "Quand un incendie se déclare, de bons réflexes incendie peuvent sauver des vies. La règle d'or : ne jamais prendre de risques et éviter toute tentative "en solo". Selon la situation dans laquelle on se trouve, les bons gestes contre les incendies diffèrent. Dans tous les cas, il faut appeler les pompiers dès que l’on se trouve en sécurité et répondre calmement à leurs questions afin qu’ils puissent localiser l’incendie et intervenir rapidement"
        </item>
        <item>
            "Dans les films, tous les héros savent soigner une blessure par balle, alors qu’il s’agit de l’une des formes de traumatismes les plus graves. Et vous?\n Il est très difficile de prédire le degré de dommage causé par une blessure par balle, et la plupart des blessures causées par une arme à feu dépassent de loin ce que vous pouvez raisonnablement traiter. Pour cette raison, la meilleure option est de conduire la victime à un hôpital dès que possible. Voici donc quelques indications sur ce que vous pouvez faire pour stabiliser la victime dans l’intervalle s’il n’y a ni médecin ni hôpital a proximité (ce guide fonctionnera aussi pour les blessures par armes blanches, de type flèches ou couteau)."
        </item>
    </string-array>
    <string name="action_pompier">Pompiers</string>
    <string name="action_police">Police</string>
    <string name="action_medicale">Médicale</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_ringtone_silent">Silent</string>
</resources>