<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_title_add_friends_to_messages"
            android:title="@string/pref_title_display_name"
            android:defaultValue="false"/>
        <Preference
            android:key="pref_key_sms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="@string/pref_title_sync_frequency"
            android:title="@string/pref_header_general"/>
        <Preference
            android:key="pref_key_mms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="@string/pref_ringtone_silent"
            android:title="@string/pref_title_display_name"/>
    </PreferenceCategory>
</PreferenceScreen>